Corrected spacing on page titles

--- a/style/Index/CoBe.css
+++ b/style/Index/CoBe.css
@@ -361,12 +361,10 @@ div.text-img3 {
 
  h2.cwsd-section-title.white {
 	color: #cfe6fc;
-	margin-top: 9.5%;
-	margin-bottom: 5%; 
+	margin-top: 5.5%;
+	margin-bottom: 15%; 
 	text-shadow: 2px 2px 1px #020723;
 } 
-
-
 
 @media (min-width: 768px) {
 	.container {
@@ -655,7 +653,7 @@ h6-f {
 } */
 
 /* ========================================================== */
-/*   <!--BEGIN OUR FEATURES --->						      */
+/*   <!--BEGIN OUR FEATURES --->						                                     */
 /* ========================================================== */
 
 
